[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/DiceController.gd" type="Script" id=1]
[ext_resource path="res://scenes/DiceGuard.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/dice/dice.tscn" type="PackedScene" id=3]

[sub_resource type="PhysicsMaterial" id=3]
bounce = 0.2

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1000, 1, 1000 )

[node name="DiceController" type="Spatial"]
script = ExtResource( 1 )

[node name="Dice" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
physics_material_override = SubResource( 3 )

[node name="DiceGuard" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.707107, -0.183239, 0.682952, 0, 0.96584, 0.259139, -0.707107, -0.183239, 0.682952, -63.8958, 108.466, 152.658 )
enabled = true

[node name="DiceFloor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="DiceFloor"]
shape = SubResource( 4 )

[node name="StopCountdown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="StartLock" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StopCountdown" to="." method="_on_StopCountdown_timeout"]
[connection signal="timeout" from="StartLock" to="." method="_on_StartLock_timeout"]
